--- a/backend/hotel/src/main/resources/public/pages/search/search.html
+++ b/backend/hotel/src/main/resources/public/pages/search/search.html
@@ -43,11 +43,13 @@
               type="image/x-icon" />
         <script src="../../main.js"></script>
     </head>
-
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+    </style>
     <body class="bg-black">
         <header class="header">
             <div class="logo">
-                <a href="../../index.html"
+                <a href="../../index.html" style=" font-family: 'Playfair Display', serif;"
                    class="white">Voyage Inn</a>
             </div>
             <ul>
