--- a/backend/hotel/src/main/resources/public/index.html
+++ b/backend/hotel/src/main/resources/public/index.html
@@ -42,11 +42,13 @@
               href="./static/icons/voyage-inn.png"
               type="image/x-icon" />
     </head>
-
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+    </style>
   <body class="bg-black">
     <header class="header">
       <div class="logo">
-        <a href="./index.html" class="white">Voyage Inn</a>
+        <a href="./index.html" style=" font-family: 'Playfair Display', serif;" class="white">Voyage Inn</a>
       </div>
       <ul>
         <li>
@@ -191,7 +193,7 @@
             </button>
           </form>
         </div>
-        <p class="text-center">We're there when plans change</p>
+        <p class="text-center" style=" font-family: 'Playfair Display', serif;">We're there when plans change</p>
       </div>
     </main>
      <div
