--- a/backend/hotel/src/main/resources/public/pages/account/cleaning-account.html
+++ b/backend/hotel/src/main/resources/public/pages/account/cleaning-account.html
@@ -1,162 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible"
-              content="IE=edge" />
-        <meta name="viewport"
-              content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
+    />
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-                integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-                crossorigin="anonymous"></script>
-        <script
-                src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js">
-        </script>
-        <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css"
+    />
 
-        <link rel="stylesheet"
-              href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../../main.css" />
+    <link rel="stylesheet" href="./account.css" />
+    <title>Account</title>
+    <link
+      rel="shortcut icon"
+      href="../../static/icons/voyage-inn.png"
+      type="image/x-icon"
+    />
+    <script src="../../auth.js"></script>
+    <script src="../../main.js"></script>
+  </head>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap");
+  </style>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-                crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-                integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-                crossorigin="anonymous"></script>
-        <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-              crossorigin="anonymous" />
-        <link rel="stylesheet"
-              href="../../main.css" />
-        <link rel="stylesheet"
-              href="./account.css" />
-        <title>Account</title>
-        <link rel="shortcut icon"
-              href="../../static/icons/voyage-inn.png"
-              type="image/x-icon" />
-        <script src="../../auth.js"></script>
-        <script src="../../main.js"></script>
-    </head>
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap");
-    </style>
-
-    <body class="bg-black">
-        <header class="header">
-            <div class="logo">
-                <a href="../../index.html"
-                   style=" font-family: 'Playfair Display', serif;"
-                   class="white">Voyage Inn</a>
+  <body class="bg-black">
+    <header class="header">
+      <div class="logo">
+        <a
+          href="../../index.html"
+          style="font-family: 'Playfair Display', serif"
+          class="white"
+          >Voyage Inn</a
+        >
+      </div>
+      <ul>
+        <li>
+          <a href="../../index.html" class="link mr-2">Home</a>
+        </li>
+        <li>
+          <a href="../overview/overview.html" class="link mr-2">Overview</a>
+        </li>
+        <li>
+          <a href="../offers/offers.html" class="link mr-2">Offers</a>
+        </li>
+        <li>
+          <a href="../contact-us/contact-us.html" class="link mr-2"
+            >Contact us</a
+          >
+        </li>
+        <div class="flex-center">
+          <img
+            src="../../static/images/user.png"
+            alt="user"
+            class="user-img-navbar"
+          />
+          <span>User name</span>
+        </div>
+      </ul>
+    </header>
+    <main class="main">
+      <div class="user-block">
+        <img src="../../static/images/user.png" alt="user" class="user-img" />
+        <div class="flex-column">
+          <p class="p1">Cleaning staff</p>
+          <p class="p2 username">User name</p>
+          <button
+            class="btn btn-primary"
+            onClick="localStorage.removeItem('user_data'); window.location.href = '../../index.html'"
+          >
+            Logout
+          </button>
+        </div>
+      </div>
+      <div class="body">
+        <h3>Personal Info</h3>
+        <div class="section-1">
+          <div class="paper user-account" style="width: 100%">
+            <div class="field"><span>Employee ID:</span><span>int</span></div>
+            <div class="field">
+              <span>Position:</span><span>Cleaning staff</span>
             </div>
-            <ul>
-                <li>
-                    <a href="../../index.html"
-                       class="link mr-2">Home</a>
-                </li>
-                <li>
-                    <a href="../overview/overview.html"
-                       class="link mr-2">Overview</a>
-                </li>
-                <li>
-                    <a href="../offers/offers.html"
-                       class="link mr-2">Offers</a>
-                </li>
-                <li>
-                    <a href="../contact-us/contact-us.html"
-                       class="link mr-2">Contact us</a>
-                </li>
-                <div class="flex-center">
-                    <img src="../../static/images/user.png"
-                         alt="user"
-                         class="user-img-navbar" />
-                    <span>User name</span>
-                </div>
-            </ul>
-        </header>
-        <main class="main">
-            <div class="user-block">
-                <img src="../../static/images/user.png"
-                     alt="user"
-                     class="user-img" />
-                <div class="flex-column">
-                    <p class="p1">Cleaning staff</p>
-                    <p class="p2">User name</p>
-                </div>
+            <div class="field"><span>Name:</span><span>int</span></div>
+            <div class="field"><span>Surname:</span><span>int</span></div>
+            <div class="field"><span>Country:</span><span>int</span></div>
+            <div class="field"><span>Address:</span><span>int</span></div>
+            <div class="field"><span>Home phone:</span><span>int</span></div>
+            <div class="field"><span>Mobile phone:</span><span>int</span></div>
+          </div>
+        </div>
+        <h3>Room status</h3>
+        <div class="section-2">
+          <div class="paper" style="width: 100%">
+            <div class="bg-blue">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Room</th>
+                    <th scope="col">Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>"Room number"</td>
+                    <td>"Not cleaned"</td>
+                    <td>
+                      <button class="btn btn-secondary">Cleaned</button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
-            <div class="body">
-                <h3>Personal Info</h3>
-                <div class="section-1">
-                    <div class="paper user-account"
-                         style="width: 100%">
-                        <div class="field">
-                            <span>Employee
-                                ID:</span><span>int</span>
-                        </div>
-                        <div class="field">
-                            <span>Position:</span><span>Cleaning
-                                staff</span>
-                        </div>
-                        <div class="field">
-                            <span>Name:</span><span>int</span>
-                        </div>
-                        <div class="field">
-                            <span>Surname:</span><span>int</span>
-                        </div>
-                        <div class="field">
-                            <span>Country:</span><span>int</span>
-                        </div>
-                        <div class="field">
-                            <span>Address:</span><span>int</span>
-                        </div>
-                        <div class="field">
-                            <span>Home
-                                phone:</span><span>int</span>
-                        </div>
-                        <div class="field">
-                            <span>Mobile
-                                phone:</span><span>int</span>
-                        </div>
-                    </div>
-                </div>
-                <h3>Room status</h3>
-                <div class="section-2">
-                    <div class="paper"
-                         style="width: 100%">
-                        <div class="bg-blue">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Room
-                                        </th>
-                                        <th scope="col">
-                                            Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>"Room number"
-                                        </td>
-                                        <td>"Not cleaned"
-                                        </td>
-                                        <td>
-                                            <button
-                                                    class="btn btn-secondary">Cleaned</button>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-    </body>
-
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
