--- a/backend/hotel/src/main/resources/public/pages/signup/signup.html
+++ b/backend/hotel/src/main/resources/public/pages/signup/signup.html
@@ -55,13 +55,18 @@
       type="image/x-icon"
     />
   </head>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
-    </style>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap");
+  </style>
   <body class="bg-black">
     <header class="header">
       <div class="logo">
-        <a href="../../index.html" style=" font-family: 'Playfair Display', serif;" class="white">Voyage Inn</a>
+        <a
+          href="../../index.html"
+          style="font-family: 'Playfair Display', serif"
+          class="white"
+          >Voyage Inn</a
+        >
       </div>
       <ul>
         <li>
@@ -156,6 +161,7 @@
           <option value="Guest">Guest</option>
           <option value="Desk clerk">Desk clerk</option>
           <option value="Manager">Manager</option>
+          <option value="Employee">Cleaning staff</option>
         </select>
         <div
           class="custom-control custom-checkbox mb-3"
