Fixed room-info.html even more

--- a/backend/hotel/src/main/resources/public/pages/room-info/room-info.html
+++ b/backend/hotel/src/main/resources/public/pages/room-info/room-info.html
@@ -93,26 +93,40 @@
             <div class="container">
                 <h1 class="white mt-4">"Single", "Room
                     number", "Floor"</h1>
-                <img class="center-block"
+                <img class="center-block mt-3"
                      style="width: 70%;"
                      src="../../static/images/Одноместный номер СПА-отель Мелоот 1 1 (1).png"
                      alt="Hotel single room" />
                 <div class="card my-3"
                      style="border-radius: 8px !important; grid-column: 1; grid-row: 1">
-
                     <div class="card-body"
-                         style="display: grid; grid-template-columns: 33% 50% 17%;">
-                        <p style="grid-column: 2; grid-row: 2;"
+                         style="display: grid; grid-template-columns: 45% 45% 10%;">
+                        <p style="grid-column: 1; grid-row: 1;"
                            class="card-text">
                             Other info, size, furniture,
                             etc.
                         </p>
+                        <p style="grid-column: 2; grid-row: 1;"
+                           class="card-text">
+                            Price:
+                        </p>
                         <p style="grid-column: 2; grid-row: 2;"
                            class="card-text">
-                            Other info, size, furniture,
-                            etc.
+                            Mon-Wed: "Price"
                         </p>
-                        <button style="grid-column: 3; grid-row: 3; width: 70px;"
+                        <p style="grid-column: 2; grid-row: 3;"
+                           class="card-text">
+                            Thu-Fri: "Price"
+                        </p>
+                        <p style="grid-column: 2; grid-row: 4;"
+                           class="card-text">
+                            Weekends: "Price"
+                        </p>
+                        <p style="grid-column: 2; grid-row: 5;"
+                           class="card-text">
+                            Total price: "Price"
+                        </p>
+                        <button style="grid-column: 3; grid-row: 5; width: 70px;"
                                 class="btn btn-success">Pay</button>
                     </div>
                 </div>
