change in dc accoun

--- a/backend/hotel/src/main/resources/public/pages/account/dc-account.html
+++ b/backend/hotel/src/main/resources/public/pages/account/dc-account.html
@@ -101,12 +101,12 @@
         <h3>Personal Info</h3>
         <div class="section-1">
           <div class="paper user-account" style="width: 100%">
-            <div class="field"><span>Employee ID:</span><span>int</span></div>
-            <div class="field"><span>Position:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
-            <div class="field"><span>Member number:</span><span>int</span></div>
+            <div class="field"><span>Employee ID:</span><span>1000</span></div>
+            <div class="field"><span>Position:</span><span>house keeping</span></div>
+            <div class="field"><span>Member number:</span><span>01</span></div>
+            <div class="field"><span>Member number:</span><span>02</span></div>
+            <div class="field"><span>Member number:</span><span>03</span></div>
+            <div class="field"><span>Member number:</span><span>04</span></div>
           </div>
         </div>
         <h3>Bookings requests</h3>
@@ -133,13 +133,13 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
+                    <td>01</td>
+                    <td>2021-04-23</td>
+                    <td>2021-04-26</td>
+                    <td>1-2</td>
+                    <td>1</td>
+                    <td>single</td>
+                    <td>101</td>
                   </tr>
                 </tbody>
               </table>
