--- a/backend/hotel/src/main/resources/public/index.html
+++ b/backend/hotel/src/main/resources/public/index.html
@@ -122,7 +122,7 @@
                       color: rgb(39, 38, 38);
                       font-weight: 700;
                     ">Check-in</span>
-                                    <input name="check-in"
+                                    <input name="check_in"
                                            type="text"
                                            class="hided-input"
                                            placeholder="MM/DD/YYYY" />
@@ -140,7 +140,7 @@
                       color: rgb(39, 38, 38);
                       font-weight: 700;
                     ">Check-out</span>
-                                    <input name="check-out"
+                                    <input name="check_out"
                                            type="text"
                                            class="hided-input"
                                            placeholder="MM/DD/YYYY" />
@@ -275,15 +275,15 @@
                         </div>
                         <div class="modal-body guests-modal-body"
                              style="text-align: center; font-size: 1.1rem; font-weight: bold">
-                            <div data-dismiss="modal">1-2
+                            <div data-dismiss="modal">1
                             </div>
                             <div data-dismiss="modal"
-                                 style="margin: 1rem 0">3-4
+                                 style="margin: 1rem 0">2
                             </div>
-                            <div data-dismiss="modal">5-6
+                            <div data-dismiss="modal">3
                             </div>
                             <div data-dismiss="modal"
-                                 style="margin: 1rem 0">7-8
+                                 style="margin: 1rem 0">4
                             </div>
                         </div>
                     </div>
@@ -304,13 +304,10 @@
                         </div>
                         <div class="modal-body destination-modal-body"
                              style="text-align: center; font-size: 1.1rem; font-weight: bold">
-                            <div data-dismiss="modal">
-                                Nur-Sultan</div>
+                            <div data-dismiss="modal">Nur-Sultan</div>
                             <div data-dismiss="modal"
-                                 style="margin: 1rem 0">
-                                Almaty</div>
-                            <div data-dismiss="modal">
-                                Shimkent</div>
+                                 style="margin: 1rem 0">Almaty</div>
+                            <div data-dismiss="modal">Shimkent</div>
                         </div>
                     </div>
                 </div>
