--- a/backend/hotel/src/main/resources/public/index.html
+++ b/backend/hotel/src/main/resources/public/index.html
@@ -278,10 +278,8 @@
                             <div data-dismiss="modal">1
                             </div>
                             <div data-dismiss="modal"
-                                 style="margin: 1rem 0">2
-                            </div>
-                            <div data-dismiss="modal">3
-                            </div>
+                                 style="margin: 1rem 0">2</div>
+                            <div data-dismiss="modal">3</div>
                             <div data-dismiss="modal"
                                  style="margin: 1rem 0">4
                             </div>
